tests/e2e/invalid_return_type4.story
function foo returns List[]
	return ""
